--- a/conf/preprocess/session_based/window/diginetica.yml
+++ b/conf/preprocess/session_based/window/diginetica.yml
@@ -2,7 +2,7 @@ type: window # single|window
 mode: session_based # session_based | session_aware
 preprocessor: diginetica #
 data:
-  folder: data/diginetica/raw/
+  folder: data/digi/raw/
   prefix: train-item-views
 
 filter:
@@ -17,4 +17,4 @@ params:
   days_shift: 18 #only window
 
 output:
-  folder: data/diginetica/slices/
+  folder: data/digi/slices/
